# traffikdata-sync

./: .copier-answers.yml  .gitignore  README.md  main.py  pyproject.toml
